# RB10_gazebo

./: README.md
rbpodo_description/: CMakeLists.txt
rbpodo_description/config/: rb10_controllers.yaml
rbpodo_description/launch/: rb10_gazebo.launch.py
rbpodo_description/robots/: rb10_1300e.urdf (copy).xacro  rb_6dof.ros2_control.xacro  rb_6dof.xacro
rbpodo_description/robots/rb10_1300e/: joint.yaml
rbpodo_description/robots/sensors/: tof_gpu_lidar.xacro
rbpodo_description/scripts/: spawn_and_attach_tof.py
rbpodo_description/worlds/: empty_fortress.world
rbpodo_moveit_config/launch/: moveit.launch.py
rbpodo_perception/: package.xml  setup.cfg  setup.py
rbpodo_perception/rbpodo_perception/: tof_distance_node.py  tof_fov_marker.py
